--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script>
     window.$docsify = {
       name: 'Discord Bot',
-      loadSidebar: true,
+      loadSidebar: 'sidebar.md',
       subMaxLevel: 4,
       search: {
         placeholder: '명령어를 검색하세요.',
