--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="디스코드 마냥 봇 명령어, Discord Bot" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/docsify/4.9.4/themes/vue.css" />
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css" />
   <script async src="//www.googletagmanager.com/gtag/js?id=UA-6145394-4"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -30,7 +30,8 @@
       }
     }
   </script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.9.4/docsify.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.9.4/plugins/search.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.10.2/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/docsify/4.10.2/plugins/search.min.js"></script>
 </body>
 </html>
